grammar.js
    source_file: $ => seq(
      optional('unit'), _statement_list($),
    ),

    line_comment: $ => token(seq(
      '%', /.*/
    )),

    _statement_line: $ => choice(
      $._statement,
      ';'
    ),

    type_declaration: $ => seq(
      'type',
      optional($.pervasive_attr),
      field('name', $._type_identifier),
      ':',
      field('type_spec', choice($._type, $.forward_type)),
    ),

    param_spec: $ => seq(
      '(',
      sepBy(',', $._param_declaration),
      optional(','),
      ')',
    ),

    _param_declaration: $ => choice(
      $.constvar_param,
      $._subprogram_param,
    ),

    constvar_param: $ => seq(
      optional(field('by_ref', $.var_attr)),
      optional(field('bind_to_register', $.register_attr)),
      sepBy1(',', field('name', $.identifier)), optional(','),
      ':', optional(field('coerce_type', $.cheat_attr)), field('param_type', $._type),
    ),

    block_statement: $ => seq(
      'begin',
      _statement_list($),
      'end'
    ),

    _expression: $ => choice(
      $.literal_expression,
      $.objclass_expression,
      $.init_expression,
      $.nil_expression,
      $.sizeof_expression,
      $.binary_expression,
      $.unary_expression,
      $.paren_expression,

      $.self_expression,
      $.nameref_expression,
      $.field_expression,
      $.deref_expression,
      $.cheat_expression,
      $.nat_cheat_expression,
      $.arrow_expression,
      $.indirect_expression,
      $.bits_expression,
      $.call_expression,
    ),

    literal_expression: $ => choice(
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
      $.integer_literal,
      $.real_literal,
    ),

    integer_literal: $ => token(seq(
      choice(
        /[0-9]+/,
        /[0-9]+#[a-zA-Z0-9]+/,
      )
      // ???: specifying sizes:
      // could be like `123!i4`, composes well with # and stuff
      // and '!' is unused in the syntax right now
    )),

    nameref_expression: $ => $.path_component,

    binary_expression: $ => {
      /** @type {[number, string | ChoiceRule][]} */
      const left_assoc = [
        [PREC.imply, '=>'],
        [PREC.or, choice('or', '|')],
        [PREC.and, choice('and', '&')],
        [PREC.compare, choice(
          '<', '>', '<=', '>=', '=',
          seq('~', '='), seq('not', '='),
          seq('~', 'in'), seq('not', 'in')
        )],
        [PREC.add, choice('+', '-', 'xor')],
        [PREC.multiply, choice('*', '/', 'div', 'mod', 'rem', 'shl', 'shr')],
      ];

      // In toco, exponentiation is right-associative,
      // while in Turing, it's left-associative.
      //
      // Since we're targeting toco anyways, we're keeping
      // it right associative.
      /** @type {[number, string | ChoiceRule][]} */
      const right_assoc = [
        [PREC.exp, '**']
      ];

      return choice(
        ...left_assoc.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        ))),
        ...right_assoc.map(([precedence, operator]) => prec.right(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        )))
      );
    },

    paren_expression: $ => seq('(', $._expression, ')'),

    field_expression: $ => prec.left(PREC.field, seq(
      field('left', $._expression),
      field('operator', '.'),
      field('field', $.path_component)
    )),

    _type: $ => choice(
      $.primitive_type,
      $.nameref_type,
      $.range_type,
      $.enum_type,
      $.array_type,
      $.set_type,
      $.record_type,
      $.union_type,
      $.pointer_type,
      $.function_type,
      $.procedure_type,
      $.collection_type,
      $.condition_type,
    ),

    nameref_type: $ => $.item_path,

    primitive_type: $ => prec.right(choice(
      'boolean',
      'addressint',
      'int',
      'int1',
      'int2',
      'int4',
      'nat',
      'nat1',
      'nat2',
      'nat4',
      'real',
      'real4',
      'real8',
      seq('char', optional($.charseq_size)),
      seq('string', optional($.charseq_size)),
    )),

    charseq_size: $ => seq(
      '(',
      choice(
        '*', // ???: may want to treat as a "from end" atom, since that's also used for ranges
        $._expression
      ),
      ')'
    ),

    range_type: $ => seq(
      field('start', $._expression),
      '..',
      field('end', $._expression)
    ),

    // ???:
    // - does a cheat expression allow inline set/enum type defs?
    //   - no
    // - does a cheat expression allow overriding size spec, or does it use the same size spec here?
    //   - allows overriding, smaller size means can get a value that's too big
    enum_type: $ => prec.right(seq(
      optional($.packed_attr),
      'enum',
      '(',
      sepBy(',', field('variant', $.identifier)), optional(','),
      ')',
      optional(seq(':', field('size_spec', $._expression))),
    )),

    array_type: $ => prec.right(seq(
      optional($.packed_attr),
      optional($.flexible_attr),
      'array',
      sepBy1(',', field('index_range', $._type)), optional(','),
      'of',
      field('element_type', $._type),
    )),

    set_type: $ => prec.right(seq(
      optional($.packed_attr),
      'set',
      'of',
      field('element_type', $._type),
      optional(seq(':', field('size_spec', $._expression))),
    )),

    record_type: $ => prec.right(seq(
      optional($.packed_attr),
      'record',
      repeat(choice($.record_field, ';')),
      end_keyword_tail('record'),
    )),

    record_field: $ => seq(
      $._field_name_list,
      ':', field('field_type', $._type),
    ),

    union_type: $ => prec.right(seq(
      optional($.packed_attr),
      'union',
      optional(field('tag_name', $._field_identifier)),
      ':', field("tag_range", $._type), 'of',
      repeat($.union_variant),
      end_keyword_tail('union'),
    )),

    union_variant: $ => seq(
      'label', sepBy(',', field('selector', $._expression)), ':',
      repeat(choice($.record_field, ';')),
    ),

    pointer_type: $ => seq(
      optional(field('checkedness', $._checkedness)),
      choice(seq('pointer', 'to'), '^'),
      field('element_type', $._type),
    ),

    _checkedness: $ => choice($.checked_attr, $.unchecked_attr),

    function_type: $ => prec.right(seq(
      choice('function', 'fcn'),
      optional(field('name', $.identifier)),
      optional(field('params', $.param_spec)),
      ':',
      field('result_type', $._type),
    )),

    procedure_type: $ => prec.right(seq(
      choice('procedure', 'proc'),
      optional(field('name', $.identifier)),
      optional(field('params', $.param_spec)),
    )),

    collection_type: $ => seq(
      'collection', 'of',
      choice(
        field('element_type', $._type),
        seq('forward', field('name', $._type_identifier)),
      ),
    ),

    condition_type: $ => seq(
      optional(choice('priority', 'deferred', 'timeout')),
      'condition',
    ),

    checked_attr: $ => 'checked',

    unchecked_attr: $ => 'unchecked',

    packed_attr: $ => 'packed',

    flexible_attr: $ => 'flexible',

    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,

    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),

    _field_name_list: $ => sepBy1(',', field('name', $._field_identifier)),

    item_path: $ => prec.right(PREC.item_path, sepBy1('.', $.path_component)),

    path_component: $ => $.identifier,
  }
});

function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}

function sepBy(sep, rule) {
  return optional(sepBy1(sep, rule));
}

function end_keyword_tail(bit) {
  return choice(seq('end', bit), `end${bit}`)
}

function end_named_tail($) {
  // don't really care about the name being different or not being there at all
  return prec.right(seq(
    'end',
    optional(field('end_name', $.identifier))
  ))
}

function _statement_list($) {
  return repeat($._statement_line);
}

/** @type {(prefix: string | Rule, ...rules: [...Rule[], Rule]) => Rule} */
function optional_chain(prefix, ...rules) {
  let [last, ...rest] = rules.reverse();
  return rest.reduce((next, current) => optional(seq(prefix, current, next)), optional(seq(prefix, last)))

}

// - Range exprs should be hoisted into the precedence tree
//   - Auto creates span covering the bounds, don't have to make one
// - AllExpr is an atom, but can keep same logic
//   - Why not "allow" `all + 1` and reject it later? Would mean that we'd have to check that all is in a valid position,
//     but eh...

// Error kinds:
// - `all` can't be used here

// ah, so we basically want to create idxs from child to parent

// mostly wondering on how to go from parsing path to expression form

// so it'd be

// expression_or_path:
// - try as a path first
// - if could be an expression (via lookahead), convert!
//   - `expr_binding_power` has a bailout way to notify completion :D

// Path:
// (PathComponent '.')+

// PathComponent:
// NameRef GenericArgs?

// GenericArgs:
// '[' (GenericArg ',')* ']'

// ?
// const(???)

// how to parse this?
// a[1..2]

// as either:
// - range expr
// - constrained ty

// i like the `ty is range` syntax from pattern types, since that both specifies the size, and is unambiguous :D

// alt `ty in 1..2`, tho we'd want `ty is Some | None`

// can't really have dedicated path nodes, because:
//
// ^a.b[int]
//
// needs to be (field (deref nameref) (component (primitive int)))
